Fixed drag and drop files to IDE, removed vertical scrollbar from body, now users can scroll only source code editor.

--- a/bin/includes/css/demo.css
+++ b/bin/includes/css/demo.css
@@ -1,5 +1,5 @@
 .CodeMirror {
-  top: 28px;
+  top: 0px;
   border: 1px solid silver;
   height: 100%;
   line-height: 1.3;
@@ -51,8 +51,6 @@ ul.tabs li:before,
 ul.tabs li:after {
   position: absolute;
   bottom: 0;
-  width: 6px;
-  height: 6px;
   content: " ";
   border: 1px solid silver;
 }
